# bulldog_ws

./: CMakeCache.txt  README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/gpd/: CloudIndexed.h  CloudSamples.h  CloudSources.h  GraspConfig.h  GraspConfigList.h  SamplesMsg.h  detect_grasps.h  detect_graspsRequest.h  detect_graspsResponse.h  pc_transform.h  pc_transformRequest.h  pc_transformResponse.h
devel/include/mask_rcnn_ros/: MaskDetect.h  MaskDetectRequest.h  MaskDetectResponse.h  Result.h
devel/include/robotiq_c_model_control/: CModel_robot_input.h  CModel_robot_output.h
devel/include/robotiq_force_torque_sensor/: ft_sensor.h  sensor_accessor.h  sensor_accessorRequest.h  sensor_accessorResponse.h
devel/include/robotiq_s_model_articulated_msgs/: SModelRobotInput.h  SModelRobotOutput.h
devel/include/turtlesim_servo/: camera_cmd.h  (+3 more)
src/bulldog/: README.md
src/bulldog_control/: CMakeLists.txt  package.xml
src/bulldog_gazebo_moveit_config/: .setup_assistant  CMakeLists.txt
src/bulldog_motion/: CMakeLists.txt  package.xml
src/bulldog_motion/src/: robot_data_collection.cpp  test.cpp  test_node.cpp
src/bulldog_simulator/: README.md
src/bulldog_simulator/bulldog_gazebo/: CMakeLists.txt  README.md  Robot_Trouble_Shooting.docx
src/bulldog_simulator/bulldog_gazebo/launch/: bulldog_empty_world.launch  spawn_bulldog.launch
src/bulldog_simulator/bulldog_gazebo/scripts/: dual_ur5_moveit_demo  sanity_check  setup_sim_positions
src/bulldog_simulator/bulldog_gazebo/urdf/: bulldog.gazebo.xacro  description.gazebo.xacro
src/bulldog_simulator/bulldog_gazebo/worlds/: box.world  husky_ddd.world
src/gpd/: CMakeLists.txt  package.xml
src/mask_rcnn_ros/: CMakeLists.txt  requirements.txt
src/rosdepthtest/: CMakeLists.txt
src/rviz_bulldog_commander/: CMakeLists.txt  plugin_description.xml
src/seven_dof_arm_test/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
src/turtlesim_servo/: CMakeLists.txt  package.xml
(+343 files in other folders)
